Tue Jun 17 17:50:00 BST 2003  Olly Betts <olly@survex.com>

	* htmlparse.cc,htmlparse.h: Moved initialisation of named_ents out of
	  header - it's not a sensible candidate for inlining.

Wed Jun 11 02:32:25 BST 2003  Olly Betts <olly@survex.com>

	* date.cc,date.h,omega.cc,omega.h,omindex.cc,query.cc,query.h,
	  scriptindex.cc: Om -> Xapian::, etc.

Fri Jun  6 01:04:12 BST 2003  Richard Boulton <richard@tartarus.org>

	* omindex.cc: Implement an upper limit on the length of URL
	  terms.  Currently, this is set at 240 characters - it can
	  probably be increased slightly, but I'm not sure exactly
	  how long a term can safely be.  If the URL term would be
	  longer than this, its last few bytes are replaced by a
	  hash of the tail of the URL.  This means that (apart from
	  hopefully very rare collisions) urlterms should still be
	  unique ids for documents.

Fri Jun 06 00:14:13 BST 2003  Richard Boulton <richard@tartarus.org>

	* omindex.cc: Clean up processing of HTML documents:
	  - Ignore the contents of <script> and <style> tags in HTML.
	  - Strip initial whitespace in each tag in an HTML document.
	  - Try not to split words in half when truncating title and
	    summary.

Tue Jun 03 11:15:28 BST 2003  Olly Betts <olly@survex.com>

	* templates/query: Create log entry in query.log.

Thu May 29 18:03:54 BST 2003  Olly Betts <olly@survex.com>

	* query.cc: Fixed bug in DEFAULT_LOG_ENTRY's Omegascript.

Thu May 29 00:22:28 BST 2003  Olly Betts <olly@survex.com>

	* query.cc: Set STEM_LANGUAGE near the start of the file so it's easy
	  for users to change until we get better configurability.

Thu May 29 00:00:28 BST 2003  Olly Betts <olly@survex.com>

	* Makefile.am,date.cc,date.h,query.cc: Split code to build a
	  date range filter into a separate file.

Wed May 28 23:38:02 BST 2003  Olly Betts <olly@survex.com>

	* configfile.cc,configfile.h,omega.cc,omega.conf,query.cc,query.h,
	  docs/omegascript.txt,docs/overview.txt,docs/quickstart.txt: